# demo

./: .gitignore  cabal.project  flake.nix
dumb/: .hsbindgen  Cargo.toml  dumb.cabal
dumb/src/: Dumb.hs  dumb.h  lib.rs
sha3/: .hsbindgen  Cargo.toml  sha3.cabal
sha3/src/: Sha3.hs  lib.rs
test/: test.cabal
test/app/: Main.hs
