cabal-version:   3.8
name:            test
version:         0.1.0.0
license:         NONE
author:          yvan@sraka.xyz
maintainer:      Yvan Sraka
build-type:      Simple

common warnings
    ghc-options: -Wall

executable test
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, dumb
    hs-source-dirs:   app
    default-language: Haskell2010
